# RetoCriptografia-Equipo2

./: .env.example  .gitignore  README.md  pyproject.toml  readme.md
app/: UI  config.py  db.py  deps.py  jobs.py  main.py  models.py  schemas.py  security.py  services.py
docs/: USO_Y_FUNCIONAMIENTO.md
gestor_identidades_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sql/: schema.sql
