[project]
name = "gestor-identidades-python"
version = "0.1.0"
description = "Gestor de identidades simplificado en FastAPI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.35",
  "pydantic-settings>=2.5.2"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
